--- a/dispatcher/pom.xml
+++ b/dispatcher/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
-            <version>6.9.7.1</version>
+            <version>${telegrambot.starter.version}</version>
         </dependency>
         <dependency>
             <groupId>ru.taf</groupId>
